@@ -167,10 +167,9 @@
 			      <child>
 				<widget class="GtkEntry" id="web_browser_command_entry">
 				  <property name="visible">True</property>
-				  <property name="sensitive">False</property>
 				  <property name="tooltip" translatable="yes">All %s occurrences will be replaced with actual link</property>
 				  <property name="can_focus">True</property>
-				  <property name="editable">True</property>
+				  <property name="editable">False</property>
 				  <property name="visibility">True</property>
 				  <property name="max_length">0</property>
 				  <property name="text" translatable="yes"></property>
@@ -452,10 +451,9 @@
 			      <child>
 				<widget class="GtkEntry" id="mail_reader_command_entry">
 				  <property name="visible">True</property>
-				  <property name="sensitive">False</property>
 				  <property name="tooltip" translatable="yes">All %s occurrences will be replaced with actual link</property>
 				  <property name="can_focus">True</property>
-				  <property name="editable">True</property>
+				  <property name="editable">False</property>
 				  <property name="visibility">True</property>
 				  <property name="max_length">0</property>
 				  <property name="text" translatable="yes"></property>
@@ -635,10 +633,9 @@
 			      <child>
 				<widget class="GtkEntry" id="messenger_command_entry">
 				  <property name="visible">True</property>
-				  <property name="sensitive">False</property>
 				  <property name="tooltip" translatable="yes">All %s occurrences will be replaced with actual link</property>
 				  <property name="can_focus">True</property>
-				  <property name="editable">True</property>
+				  <property name="editable">False</property>
 				  <property name="visibility">True</property>
 				  <property name="max_length">0</property>
 				  <property name="text" translatable="yes"></property>
@@ -854,10 +851,9 @@
 			      <child>
 				<widget class="GtkEntry" id="image_command_entry">
 				  <property name="visible">True</property>
-				  <property name="sensitive">False</property>
 				  <property name="tooltip" translatable="yes">All %s occurrences will be replaced with actual link</property>
 				  <property name="can_focus">True</property>
-				  <property name="editable">True</property>
+				  <property name="editable">False</property>
 				  <property name="visibility">True</property>
 				  <property name="max_length">0</property>
 				  <property name="text" translatable="yes"></property>
@@ -1038,10 +1034,9 @@
 			      <child>
 				<widget class="GtkEntry" id="sound_command_entry">
 				  <property name="visible">True</property>
-				  <property name="sensitive">False</property>
 				  <property name="tooltip" translatable="yes">All %s occurrences will be replaced with actual link</property>
 				  <property name="can_focus">True</property>
-				  <property name="editable">True</property>
+				  <property name="editable">False</property>
 				  <property name="visibility">True</property>
 				  <property name="max_length">0</property>
 				  <property name="text" translatable="yes"></property>
@@ -1222,10 +1217,9 @@
 			      <child>
 				<widget class="GtkEntry" id="video_command_entry">
 				  <property name="visible">True</property>
-				  <property name="sensitive">False</property>
 				  <property name="tooltip" translatable="yes">All %s occurrences will be replaced with actual link</property>
 				  <property name="can_focus">True</property>
-				  <property name="editable">True</property>
+				  <property name="editable">False</property>
 				  <property name="visibility">True</property>
 				  <property name="max_length">0</property>
 				  <property name="text" translatable="yes"></property>
@@ -1441,10 +1435,9 @@
 			      <child>
 				<widget class="GtkEntry" id="text_command_entry">
 				  <property name="visible">True</property>
-				  <property name="sensitive">False</property>
 				  <property name="tooltip" translatable="yes">All %s occurrences will be replaced with actual link</property>
 				  <property name="can_focus">True</property>
-				  <property name="editable">True</property>
+				  <property name="editable">False</property>
 				  <property name="visibility">True</property>
 				  <property name="max_length">0</property>
 				  <property name="text" translatable="yes"></property>
@@ -1625,10 +1618,9 @@
 			      <child>
 				<widget class="GtkEntry" id="terminal_command_entry">
 				  <property name="visible">True</property>
-				  <property name="sensitive">False</property>
 				  <property name="tooltip" translatable="yes">All %s occurrences will be replaced with actual link</property>
 				  <property name="can_focus">True</property>
-				  <property name="editable">True</property>
+				  <property name="editable">False</property>
 				  <property name="visibility">True</property>
 				  <property name="max_length">0</property>
 				  <property name="text" translatable="yes"></property>
@@ -1678,9 +1670,8 @@
 			      <child>
 				<widget class="GtkEntry" id="terminal_exec_flag_entry">
 				  <property name="visible">True</property>
-				  <property name="sensitive">False</property>
 				  <property name="can_focus">True</property>
-				  <property name="editable">True</property>
+				  <property name="editable">False</property>
 				  <property name="visibility">True</property>
 				  <property name="max_length">0</property>
 				  <property name="text" translatable="yes"></property>
